--- a/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
+++ b/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
@@ -13,7 +13,7 @@
         </odp-search-box>
     </div>
     <div class="d-flex ml-auto mr-2">
-        <div class="add-attribute hover" (click)="add()">
+        <div class="add-attribute hover d-flex" (click)="add()">
             <i class="dsi dsi-plus-circle font-20 icon-primary mr-2"></i>
             <label class="fw-500 font-normal heading">Add Property</label>
 
