--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,37 +29,17 @@
             <form [formGroup]="form">
               <div class="form-group">
                 <label style="margin-top: 20px">Email</label>
-                <input
-                  type="text"
-                  class="form-control form-control-lg input-text"
-                  formControlName="username"
-                  id="username"
-                  #usernameControl
-                  placeholder="name@email.com"
-                  odpAutoFocus
-                />
+                <input type="text" class="form-control form-control-lg input-text" formControlName="username"
+                  id="username" #usernameControl placeholder="name@email.com" odpAutoFocus
+                  (keyup.enter)="onSubmit($event)" />
                 <label style="margin-top: 20px">Password</label>
-                <input
-                  type="password"
-                  class="form-control form-control-lg input-text"
-                  formControlName="password"
-                  id="password"
-                  #password
-                  placeholder="xxxxxxxxx"
-                  (keyup.enter)="onSubmit($event)"
-                />
+                <input type="password" class="form-control form-control-lg input-text" formControlName="password"
+                  id="password" #password placeholder="xxxxxxxxx" (keyup.enter)="onSubmit($event)" />
 
                 <!-- <a href="#" class="text-secondary">Forgot your Password?</a> -->
-                <button
-                  type="button"
-                  class="btn btn-lg btn-primary input-text"
-                  (click)="onSubmit($event)"
-                  style="margin-top: 20px"
-                >
-                  <span
-                    *ngIf="loader"
-                    class="fa fa-spinner fa-pulse mr-2"
-                  ></span>
+                <button type="button" class="btn btn-lg btn-primary input-text" (click)="onSubmit($event)"
+                  style="margin-top: 20px">
+                  <span *ngIf="loader" class="fa fa-spinner fa-pulse mr-2"></span>
                   <span class="btn-text">Login</span>
                 </button>
               </div>
@@ -167,28 +147,17 @@
       <p class="font-16 font-weight-bold text-center">Old Session is Active</p>
       <p class="text-center text-secondary">
         You already have an active session.
-        <ng-container *ngIf="rbacUserReloginAction === 'allow'"
-          >Logging in will invalidate all your previous session.
+        <ng-container *ngIf="rbacUserReloginAction === 'allow'">Logging in will invalidate all your previous session.
         </ng-container>
-        <ng-container *ngIf="rbacUserReloginAction === 'deny'"
-          >Please contact you admistrator.</ng-container
-        >
+        <ng-container *ngIf="rbacUserReloginAction === 'deny'">Please contact you admistrator.</ng-container>
       </p>
     </div>
     <div class="d-flex align-items-center justify-content-end">
-      <button
-        type="button"
-        class="btn btn-link"
-        (click)="clearSessionModalRef.close(false)"
-      >
+      <button type="button" class="btn btn-link" (click)="clearSessionModalRef.close(false)">
         Close
       </button>
-      <button
-        *ngIf="rbacUserReloginAction === 'allow'"
-        type="button"
-        class="btn btn-dark btm-min-width ml-3"
-        (click)="clearSessionModalRef.close(true)"
-      >
+      <button *ngIf="rbacUserReloginAction === 'allow'" type="button" class="btn btn-dark btm-min-width ml-3"
+        (click)="clearSessionModalRef.close(true)">
         Continue
       </button>
     </div>
