--- a/src/app/utils/ag-grid-actions-renderer/ag-grid-actions-renderer.component.html
+++ b/src/app/utils/ag-grid-actions-renderer/ag-grid-actions-renderer.component.html
@@ -1,12 +1,15 @@
 <ng-container *ngFor="let button of buttons">
-    <i *ngIf="button === 'End Session'" class="fa fa-ban mr-2" (click)="handleButtonClick(button, $event)">
+    <i *ngIf="button === 'End Session'" class="fa fa-ban mr-2 cursor-pointer"
+        (click)="handleButtonClick(button, $event)">
     </i>
-    <i *ngIf="button === 'Deactivate'" class="fa fa-minus-circle mr-2" (click)="handleButtonClick(button, $event)">
+    <i *ngIf="button === 'Deactivate'" class="fa fa-minus-circle mr-2 cursor-pointer"
+        (click)="handleButtonClick(button, $event)">
     </i>
-    <i *ngIf="button === 'Activate'" class="dsi dsi-plus-circle mr-2" (click)="handleButtonClick(button, $event)">
+    <i *ngIf="button === 'Activate'" class="dsi dsi-plus-circle mr-2 cursor-pointer"
+        (click)="handleButtonClick(button, $event)">
     </i>
-    <i *ngIf="button === 'Edit'" class="fa fa-edit mr-2" (click)="handleButtonClick(button, $event)">
+    <i *ngIf="button === 'Edit'" class="fa fa-edit mr-2 cursor-pointer" (click)="handleButtonClick(button, $event)">
     </i>
-    <i *ngIf="button === 'Delete'" class="dsi dsi-trash" (click)="handleButtonClick(button, $event)">
+    <i *ngIf="button === 'Delete'" class="dsi dsi-trash cursor-pointer" (click)="handleButtonClick(button, $event)">
     </i>
 </ng-container>
