--- a/src/app/home/control-panel/user/user.component.html
+++ b/src/app/home/control-panel/user/user.component.html
@@ -9,7 +9,7 @@
     <!-- <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb> -->
     <div class="options d-flex">
       <div class="fw-600 font-22">Users</div>
-      <div class="d-flex align-items-center ml-auto mr-2">
+      <div class="d-flex align-items-center ml-auto">
         <ng-container *ngIf="hasPermission('PMUBD')">
           <button *ngIf="checkedUsers.length > 0" type="button" class="btn btn-outline-light border text-danger mr-3"
             (click)="removeUsers()" id="removeusers" [ngbTooltip]="'Delete '+checkedUsers.length+' Users'">
