--- a/src/app/home/local-bot/local-bot.component.html
+++ b/src/app/home/local-bot/local-bot.component.html
@@ -9,7 +9,7 @@
   <div class="d-flex flex-column position-relative">
     <div class="options d-flex">
       <div class="fw-600 font-22">Bots</div>
-      <button class="btn btn-primary mt-2 ml-auto d-flex mr-2" (click)="isCreate = true" *ngIf="hasPermission('PMBBC')">
+      <button class="btn btn-primary mt-2 ml-auto d-flex" (click)="isCreate = true" *ngIf="hasPermission('PMBBC')">
         <span class="dsi dsi-plus mr-2"></span>
         <span class="text">New Bot</span>
       </button>
