--- a/src/app/utils/switch/switch.component.html
+++ b/src/app/utils/switch/switch.component.html
@@ -5,7 +5,7 @@
         <span class="slider" [ngClass]="sliderClass"></span>
         <span class="toggler" [ngClass]="{'bg-light':disabled}"></span>
     </label>
-    <span class="text">{{ checked ? 'Yes' : 'No'}}</span>
+    <span *ngIf="showLabel" class="text">{{ checked ? 'Yes' : 'No'}}</span>
 </div>
 <div class="d-flex align-items-center" *ngIf="!edit.status">
     <span class="text d-flex" *ngIf="checked">
